--- a/2DO-Client/App.xaml
+++ b/2DO-Client/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="_2DO_Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:_2DO_Client"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:_2DO_Client">
     <Application.Resources>
          
     </Application.Resources>
