--- a/2DO-Client/Views/MainWindowView.xaml
+++ b/2DO-Client/Views/MainWindowView.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="_2DO_Client.MainWindow"
+﻿<Window x:Class="_2DO_Client.Views.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:_2DO_Client"
+        xmlns:local="clr-namespace:_2DO_Client.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindowView" Height="450" Width="800">
     <Grid>
-
+        
     </Grid>
 </Window>
