--- a/2DO-Client/Views/AddTaskWindowViews/AddCategorieWindowView.xaml
+++ b/2DO-Client/Views/AddTaskWindowViews/AddCategorieWindowView.xaml
@@ -1,26 +1,22 @@
-﻿<Window x:Class="_2DO_Client.Views.AddTaskWindowView"
+﻿<Window x:Class="_2DO_Client.Views.AddCategorieWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2DO_Client.Views"
         mc:Ignorable="d"
-        Background="WhiteSmoke"
-        Title="AddTaskWindowView" Height="450" Width="800">
+        Title="AddCategorieWindowView" Height="200" Width="800">
 
-
-
-
-<Window.Resources>
-    <Style x:Key="FocusVisual">
-        <Setter Property="Control.Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    <Window.Resources>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <SolidColorBrush x:Key="Button.Static.Background" Color="#cccccc"/>
         <SolidColorBrush x:Key="Button.Static.Border" Color="#cccccc"/>
         <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#cccccc"/>
@@ -76,38 +72,14 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Vorname:"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding Firstname}"/>
+        <Label Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Name:"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="20 40 20 40" VerticalContentAlignment="Center" Text="{Binding Name}"/>
 
-        <Label Grid.Row="1" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Nachname:"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding Lastname}"/>
-
-        <Label Grid.Row="2" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Geschlecht:"/>
-        <ComboBox ItemsSource="{Binding Genders}" SelectedItem="{Binding Gender}" Grid.Row="2" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding Gender}"/>
-
-        <Label Grid.Row="3" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Straße:"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding Street}"/>
-
-        <Label Grid.Row="4" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Hausnummer:"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding StreeNumber}"/>
-
-        <Label Grid.Row="5" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="Postleitzahl:"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding PostCode}"/>
-
-        <Label Grid.Row="6" Grid.Column="0"  HorizontalContentAlignment="Right" VerticalAlignment="Center" Content="Ort:"/>
-        <TextBox Grid.Row="6" Grid.Column="1" Margin="20 10 20 10" VerticalContentAlignment="Center" Text="{Binding City}"/>
-
-        <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <Button Style="{DynamicResource ButtonStyleListSelector}" Command="{Binding TaskAddButton}" Background="#cccccc" Foreground="Black" BorderThickness="0" Width="120" Margin="10 10 10 10">Ok</Button>
+        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button Style="{DynamicResource ButtonStyleListSelector}" Command="{Binding OkCommand}" Background="#cccccc" Foreground="Black" BorderThickness="0" Width="120" Margin="10 10 10 10">Ok</Button>
             <Button Style="{DynamicResource ButtonStyleListSelector}" Command="{Binding CancelCommand}" Background="#cccccc" BorderThickness="0" Foreground="Black" Width="120" Margin="10 10 10 10">Abbrechen</Button>
         </StackPanel>
     </Grid>
