--- a/2DO-Client/Views/Submoduls/CategorieSelectorView.xaml
+++ b/2DO-Client/Views/Submoduls/CategorieSelectorView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:_2DO_Client.Views"
+             xmlns:local="clr-namespace:_2DO_Client.Views" xmlns:viewmodels="clr-namespace:_2DO_Client.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:CategorieSelectorViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="200"
              Background="White" Foreground="Gray">
@@ -62,7 +62,7 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel Orientation="Vertical" VerticalAlignment="Top">
-                            <TextBlock FontWeight="Bold" Text="{Binding Path=Name}" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock FontWeight="Bold" Text="{Binding Name}" VerticalAlignment="Center"></TextBlock>
                         </WrapPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
