--- a/2DO-Client/Views/MainWindowView.xaml
+++ b/2DO-Client/Views/MainWindowView.xaml
@@ -138,6 +138,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Button Grid.Row="2" Margin="10 10 10 10" Command="{Binding Select}"></Button>
+
 
         <Button Style="{DynamicResource ButtonStyleListSelector}" Grid.Row="2" Grid.Column="1" Command="{Binding ShowListSelectorCommand}" Margin="0 5 5 5">
             <StackPanel>
