--- a/2DO-Client/Views/AddTaskWindowViews/AddTaskListWindowView.xaml
+++ b/2DO-Client/Views/AddTaskWindowViews/AddTaskListWindowView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="AddTaskListWindowView" Height="250" Width="800">
+        Title="2Do Liste hinzufügen" Height="250" Width="800">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
