--- a/2DO-Client/Views/AddTaskWindowViews/ConnectTaskToCategoryWindowView.xaml
+++ b/2DO-Client/Views/AddTaskWindowViews/ConnectTaskToCategoryWindowView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2DO_Client.Views.AddTaskWindowViews"
         mc:Ignorable="d"
-        Title="ConnectTaskToCategoryWindowView" Height="450" Width="450">
+        Title="Aufgaben Auswahl" Height="450" Width="450">
 
     <Window.Resources>
         <Style x:Key="FocusVisual">
